--- a/src/index.css
+++ b/src/index.css
@@ -1,70 +1,47 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@layer base {
+    html {
+        @apply scroll-smooth
+    }
+    * {
+        @apply box-border
+    }
+    body {
+        background-color: #040714;
+        color: #F9F9F9;
+        font-family: Avenir-Roman, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    a {
+        color: #F9F9F9;
+        text-decoration: none;
+    }
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+    .font-bold {
+      font-size: 0;
+    }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+    .button {
+      @apply font-bold text-[#F9F9F9] bg-[#0063E5] w-full mb-3 tracking-widest text-lg p-4 border-solid border-transparent rounded-sm hover:bg-[#0483EE] cursor-pointer
+    }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    @media only screen and (min-width: 768px) {
+        body {
+          font-size: 16px;
+        }
+      }
+      @media only screen and (min-width: 480px) and (max-width: 768px) {
+        body {
+          font-size: 15px;
+        }
+      }
+      @media only screen and (max-width: 479px) {
+        body {
+            font-size: 14px;
+        }
+      }
 }
